# atlas

./: .firebaserc  .gitignore  README.md  firebase.json  next.config.ts  package-lock.json  package.json
app/: globals.css  (+2 more)
tools/kairos/apps/backend/: .env.example  pyproject.toml
tools/kairos/apps/backend/src/jornada/: __init__.py
tools/kairos/apps/backend/src/jornada/application/: __init__.py  reporte_excel.py  seed.py
tools/kairos/apps/backend/src/jornada/config/: __init__.py  settings.py
tools/kairos/apps/backend/src/jornada/domain/: __init__.py  enums.py  errors.py  festivos.py  labels.py
tools/kairos/apps/backend/src/jornada/domain/algorithms/: __init__.py  classifier.py  recargos.py  time_segments.py
tools/kairos/apps/backend/src/jornada/domain/nomina/: __init__.py  calendario.py  liquidacion.py  parametros.py
tools/kairos/apps/backend/src/jornada/infrastructure/: __init__.py  email.py  logs.py
tools/kairos/apps/backend/src/jornada/infrastructure/buk/: __init__.py  cliente.py  sync.py
tools/kairos/apps/backend/src/jornada/infrastructure/db/: __init__.py  database.py  models.py
tools/kairos/apps/backend/src/jornada/infrastructure/security/: __init__.py  auth.py
tools/kairos/apps/backend/src/jornada/presentation/: __init__.py
tools/kairos/apps/backend/src/jornada/presentation/api/: __init__.py  app.py  deps.py  endpoints_auth.py  endpoints_clasificacion.py  endpoints_core.py  endpoints_crud.py  schemas.py  schemas_core.py  schemas_crud.py
tools/kairos/apps/backend/tests/unit/: test_clasificacion.py  test_nomina.py  test_reporte_financiera.py
(+5 files in other folders)
